--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "dotenv": "^2.0.0",
+    "grant-koa": "^3.6.3",
     "koa": "~0.19.1",
     "koa-ejs": "^3.0.0",
     "koa-middlewares": "~2.1.0",
+    "koa-mount": "^1.3.0",
     "koamethodoverride": "^1.0.1",
     "nodemailer": "^2.5.0",
     "pg": "^6.1.0",
