--- a/package.json
+++ b/package.json
@@ -8,16 +8,17 @@
     "start": "node --harmony app.js"
   },
   "dependencies": {
+    "co-request": "^1.0.0",
     "dotenv": "^2.0.0",
     "grant-koa": "^3.6.3",
     "koa": "~0.19.1",
     "koa-ejs": "^3.0.0",
-    "koa-middlewares": "~2.1.0",
+    "koa-middlewares": "^2.1.0",
     "koa-mount": "^1.3.0",
     "koamethodoverride": "^1.0.1",
     "nodemailer": "^2.5.0",
     "pg": "^6.1.0",
-    "requests": "^0.1.7",
+    "request": "^2.74.0",
     "sequelize": "^3.24.1",
     "sqlite3": "^3.1.4"
   },
